--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   "dependencies": {
     "@types/uuid": "^3.4.5",
     "bunyan": "^1.8.12",
+    "graphql": "^14.5.8",
+    "graphql-schema-typescript": "^1.3.1",
     "uuid": "^3.3.3"
   }
 }
