--- a/package.json
+++ b/package.json
@@ -57,14 +57,16 @@
     "aws-sdk": "^2.551.0",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.4.5"
+    "typescript": "^3.6.4"
   },
   "dependencies": {
     "@types/uuid": "^3.4.5",
+    "axios": "^0.19.0",
     "bunyan": "^1.8.12",
     "graphql": "^14.5.8",
     "graphql-schema-linter": "^0.2.1",
     "graphql-schema-typescript": "^1.3.1",
+    "graphql-tag": "^2.10.1",
     "uuid": "^3.3.3"
   }
 }
