--- a/package.json
+++ b/package.json
@@ -60,13 +60,18 @@
     "typescript": "^3.6.4"
   },
   "dependencies": {
+    "@types/mime-types": "^2.1.0",
     "@types/uuid": "^3.4.5",
     "axios": "^0.19.0",
     "bunyan": "^1.8.12",
+    "file-type": "^12.3.0",
     "graphql": "^14.5.8",
     "graphql-schema-linter": "^0.2.1",
     "graphql-schema-typescript": "^1.3.1",
     "graphql-tag": "^2.10.1",
+    "mime-types": "^2.1.24",
+    "read-chunk": "^3.2.0",
+    "request-promise": "^4.2.4",
     "uuid": "^3.3.3"
   }
 }
